[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/button1.png" type="Texture" id=1]
[ext_resource path="res://Assets/button1-press.png" type="Texture" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Button2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Button2-pressed.png" type="Texture" id=6]
[ext_resource path="res://Themes/MainTheme.tres" type="Theme" id=7]
[ext_resource path="res://Sound/Click.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=4]
size = 126
outline_color = Color( 0.94902, 0.101961, 0.101961, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.0470588, 0.262745, 1 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 198.0
margin_top = 76.0
margin_right = 846.0
margin_bottom = 192.0
custom_colors/default_color = Color( 0.513726, 0.0862745, 0.0862745, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "Not Today Hero"
scroll_active = false

[node name="Controls" type="RichTextLabel" parent="."]
margin_left = 322.0
margin_top = 538.0
margin_right = 713.0
margin_bottom = 600.0
custom_colors/default_color = Color( 0.768627, 0.92549, 0.721569, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "WASD or Arrow Keys to move
Left Click to attack in front of you"

[node name="StartButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -25.0
margin_right = 75.0
margin_bottom = 25.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="StartLabel" type="RichTextLabel" parent="StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -7.0
margin_right = 14.0
margin_bottom = 7.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
text = "Start"

[node name="Credits" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -152.0
margin_right = 32.0
margin_bottom = -120.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="CreditsButtonLabel" type="RichTextLabel" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -7.0
margin_right = 19.0
margin_bottom = 7.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
text = "Credits"

[node name="CreditsPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -308.0
margin_top = -252.0
margin_right = 308.0
margin_bottom = 259.0
theme = ExtResource( 7 )

[node name="credits_label" type="RichTextLabel" parent="CreditsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true

[node name="CreditsCloseButton" type="TextureButton" parent="CreditsPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="CloseButtonLabel" type="RichTextLabel" parent="CreditsPanel/CreditsCloseButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.0
margin_top = -7.0
margin_right = 15.0
margin_bottom = 7.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 3 )
text = "Close"

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="meta_clicked" from="CreditsPanel/credits_label" to="." method="_on_credits_label_meta_clicked"]
[connection signal="pressed" from="CreditsPanel/CreditsCloseButton" to="." method="_on_CreditsCloseButton_pressed"]
